# Introduction-to-Data-Pipeline-and-Apache-Airflow

./: README.md
.devcontainer/: devcontainer.json
airflow/mnt/dags/: dog_api_pipeline.py
first_project/: dogs.json  first_data_pipeline.py  pyproject.toml
