[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["BANPLOYMEEMEOW <51909721+Ploypairin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
